# media_app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install_pyenv.md  pyproject.toml  requirements-dev.txt  requirements.txt  results.xml
files_with_comments/: config.py  conftest.py  database.py  post.py
mediaapp/: main.py
mediaapp/routers/: post.py
mediaapp/tests/: conftest.py  test_simple.py
mediaapp/tests/routers/: test_post.py
src/: config.py  database.py  logging_conf.py  main.py  security.py
src/configs/: logging_config.py
src/models/: post.py
src/routers/: post.py  user.py
src/scripts/pre-commit/: format_code.sh  run_tests.sh
src/tests/: conftest.py  test_security.py
src/tests/routers/: test_post.py  test_user.py
storeapi/: main.py
