[project]
name = "media-app"
version = "0.1.0"
description = "Social media pytho app which uses fastapi framework"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "sqlalchemy",
    "databases[aiosqlite]",
    "python-dotenv",
    "pydantic-settings",
    "rich",
    "asgi-correlation-id",
    "python-json-logger",
    "logtail-python",
    "python-jose",
    "python-multipart",
    "passlib[bcrypt]",
    "bcrypt<4.0.0",
    "ruff",
    "black",
    "pytest == 7.2.2",
    "httpx",
    "anyio == 3.6.2",
    "pluggy == 1.0.0",
    "pytest-mock",
    "pre-commit"
]

[tool.ruff]
# Configure import sorting to match isort behavior
fix = true

[tool.ruff.lint]
# Enable import sorting in addition to other linting rules
extend-select = ["I"]

[tool.ruff.lint.isort]
# Group imports into sections
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
